# heimdex-media-pipelines

./: .gitignore  CODE_REVIEW_PR3.md  Dockerfile.test  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: deploy-staging.yml  release.yml
scripts/: blur-fixture-sweep.sh
src/heimdex_media_pipelines/: __init__.py  __main__.py  cli.py  device.py
src/heimdex_media_pipelines/blur/: __init__.py  cli.py  config.py  masks.py  owlv2.py  pipeline.py  primitives.py  queries.py
src/heimdex_media_pipelines/composition/: __init__.py  cli.py  overlay_render.py  render.py
src/heimdex_media_pipelines/faces/: __init__.py  (+6 more)
tests/: test_cli_smoke.py  test_composition_render.py  test_device.py  test_faces_pipeline_smoke.py  test_speech_pipeline_smoke.py
tests/blur/: conftest.py  test_cli_importable.py  test_config.py  test_contract_compat.py  test_masks.py  test_owlv2_stdlib_logging.py  test_pipeline_smoke.py  test_primitives.py  test_queries.py
tests/composition/: conftest.py  test_overlay_render.py
tests/faces/: test_detect_keyframes.py
tests/ocr/: test_cli.py  test_engine.py  test_enrichment.py  test_golden.py  test_pii.py  test_pipeline.py
tests/product_enum/: test_clusterer.py  test_noise_filter.py  test_pipeline.py  test_reference_picker.py
tests/scenes/: test_assembler.py  test_cli.py  test_cli_ocr_integration.py  test_detector.py  test_keyframe.py  test_signals.py  test_splitter.py
tests/speech/: test_diarization.py  test_stt_api.py  test_stt_perf.py
tests/transcoding/: test_transcode_decision.py
tests/vision/: test_engine.py
(+35 files in other folders)
