[project]
name = "heimdex-media-pipelines"
version = "0.5.0"
description = "Heavy ML pipelines for Heimdex media processing (face detection, STT, embeddings)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "heimdex-media-contracts>=0.3.0",
    "opencv-python-headless>=4.8",
    "typer>=0.9",
]

[project.optional-dependencies]
faces = [
    "insightface>=0.7",
    "onnxruntime>=1.16",
]
speech = [
    "openai-whisper>=20230918",
    "torch>=2.0",
]
speech-fast = [
    "faster-whisper>=1.0",
]
speech-api = [
    "openai>=1.0",
]
ocr = [
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.1",
    "Pillow>=9.0",
]
all = [
    "heimdex-media-pipelines[faces,speech,speech-fast,speech-api,ocr]",
]
dev = [
    "pytest>=7",
]

[project.scripts]
heimdex-pipelines = "heimdex_media_pipelines.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdex_media_pipelines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "ocr_golden: OCR golden dataset tests (require media + paddleocr)",
]
